# IoText-data-protocol

./: Cargo.toml  Makefile  README.md  __init__.py  noxfile.py  requirements-dev.txt  setup.py
.github/workflows/: codecov.yaml  rust_coverage.yaml  workflow.yml
benchmarks/: IoText_codecs_benchmark_test.py
iotext/: __init__.py
src/: lib.rs  test_parse.rs
src/builders/: iot_ext_item_data_builder.py
src/codecs/: item_codec.py  metric_data_item_codec.py
src/types/: item_type.py  metric_data.py  metric_data_item.py
tests/builders/: test_iot_ext_item_data_builder.py
tests/codecs/: test_iot_ext_codec.py  test_metric_data_item_codec.py
tests/tools/: test_crc16.py
