[package]
name = "iotext"
version = "0.1.0"
rust-version = "1.57.0"

[lib]
name = "_iotext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["auto-initialize", "extension-module"] }

# dependencies
fancy-regex = "0.11.0"
regex = "1.8.3"
rustc-hash = "1.1.0"
bstr = "1.5.0"

[profile.release]
incremental = true
