[package]
name = "iotext"
version = "0.1.0"
rust-version = "1.57.0"
edition = "2021"

[lib]
name = "_iotext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["auto-initialize", "extension-module"] }
iotext_rs = { git = "https://github.com/bieli/IoText-rs.git" }
# dependencies
fancy-regex = "0.11.0"
regex = "1.9.4"
rustc-hash = "1.1.0"
bstr = "1.6.1"

[profile.release]
incremental = true
